--- a/picasso/src/index.css
+++ b/picasso/src/index.css
@@ -5,8 +5,14 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
 }
-
+#root{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
